@@ -12753,7 +12753,8 @@ int readcombofile(PACKFILE *f, int skip, byte nooverwrite)
 		return 0;
 	}
 	al_trace("Reading combo: count(%d)\n", count);
-	
+	reset_combo_animations();
+	reset_combo_animations2();
 	newcombo temp_combo;
 	memset(&temp_combo, 0, sizeof(newcombo));
 
@@ -12945,7 +12946,8 @@ int readcombofile_to_location(PACKFILE *f, int start, byte nooverwrite, int skip
 	}
 	al_trace("Reading tile: count(%d)\n", count);
 	
-	
+	reset_combo_animations();
+	reset_combo_animations2();
 	newcombo temp_combo;
 	memset(&temp_combo, 0, sizeof(newcombo)); 
 	
@@ -13117,7 +13119,8 @@ int writecombofile(PACKFILE *f, int index, int count)
 	{
 		return 0;
 	}
-	
+	reset_combo_animations();
+	reset_combo_animations2();
 	for ( int tilect = 0; tilect < count; tilect++ )
 	{
 	
